Discriminate saved run arguments by environment
