# services/tracker/src/tracker/api/single_benchmark.py
@@ -16,7 +16,6 @@ from tracker.aws.s3 import create_benchmark_url
 from tracker.database.models import Benchmark, ErrorResult, Org, Task, TaskStatus
 from tracker.database.scoping import get_scoped
 from tracker.database.session import get_session
-from tracker.local.resources import LocalResources
 from tracker.types import SingleBenchmarkResponse, TasksResponse, TaskSummary
 
 router = APIRouter(prefix="/benchmarks")
@@ -69,7 +68,6 @@ async def get_single_benchmark(
         cloudwatch_url = str(request.url_for("get_logs", benchmark_id=benchmark.id))
         s3_bucket_url = str(request.url_for("list_run_artifacts", benchmark_id=benchmark.id))
     else:
-        assert not isinstance(benchmark.arguments.properties, LocalResources)
         aws_runtime = resolve_run_metadata_aws_runtime(
             request,
             aws_managed=benchmark.aws_managed,
